Add place type endpoints and docs
